# metaflow-airflow-training-platform

./: .gitignore  Makefile  README.md  pyproject.toml
airflow/: dag-bundle-config.ini  metaflow-export.env.example
contracts/: demand_training_contract.yml
docs/: accelerator-scheduling.md  advanced-orchestration-assessment.md  ai-workload-telemetry.md  airflow-asset-partitioning.md  airflow-dag-bundles.md  airflow-deadline-alerts.md  airflow-multi-team-readiness.md  airflow-stateful-orchestration.md  checkpointed-distributed-training.md  cloud-migration.md  constrained-impersonation.md  control-plane-depth.md  control-plane-diagnostics.md  cost-observability.md  demo-narration.txt  design-system.md  disaster-recovery.md  dra-admin-access-diagnostics.md  dra-advanced-device-sharing.md  dra-resource-health-status.md  dynamic-resource-allocation.md  event-driven-assets.md  executable-metaflow-runtime.md  gitops-promotion.md  governance-evidence.md  hpa-scale-to-zero.md  indexed-job-resilience.md  inference-gateway.md  inplace-pod-resize.md  judge-demo.md  kuberay-kueue.md  kubernetes-airflow-robustness.md  kueue-cohort-fair-sharing.md  kueue-elastic-workloads.md  kueue-flavor-fungibility.md  kueue-pending-workload-visibility.md  memory-qos.md  multi-tenant-fairness.md  multikueue-dispatch.md  network-security.md  (+22 more)
gitops/: gitops-promotion.yaml
kubernetes/: accelerator-scheduling.yaml  admission-policies.yaml  airflow-kubernetes-executor-pod-template.yaml  chaos-experiments.yaml  checkpointed-training-jobset.yaml  cloud-nodepools.yaml  constrained-impersonation.yaml  (+40 more)
(+81 files in other folders)
