[project]
name = "metaflow-airflow-training-platform"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
integrations = [
  "metaflow>=2.19,<2.20",
  "apache-airflow>=3.3,<3.4",
  "mlflow>=2.14",
  "great-expectations>=0.18",
  "prometheus-client>=0.20"
]
metaflow-runtime = ["metaflow==2.19.29"]
airflow33 = ["apache-airflow==3.3.0"]
dev = ["ruff==0.15.21"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
